--- a/resources/css/landing.css
+++ b/resources/css/landing.css
@@ -1678,7 +1678,7 @@ label {
 }
 
 .feature-inner::before {
-    content: "";
+    /* content: ""; */
     position: absolute;
     top: 0;
     right: 0;
