--- a/resources/css/argon-dashboard-tailwind.css
+++ b/resources/css/argon-dashboard-tailwind.css
@@ -2483,9 +2483,9 @@ h6 {
   vertical-align: bottom;
 }
 
-.font-sans {
+/* .font-sans {
   font-family: Open Sans;
-}
+} */
 
 .text-base {
   font-size: 1rem;
